@@ -757,14 +757,14 @@ EncodedJSValue JSC_HOST_CALL globalFuncImportModule(ExecState* exec)
     auto* specifier = exec->uncheckedArgument(0).toString(exec);
     if (Exception* exception = catchScope.exception()) {
         catchScope.clearException();
-        promise->reject(exec, exception);
+        promise->reject(exec, exception->value());
         return JSValue::encode(promise->promise());
     }
 
     auto* internalPromise = globalObject->moduleLoader()->importModule(exec, specifier, sourceOrigin);
     if (Exception* exception = catchScope.exception()) {
         catchScope.clearException();
-        promise->reject(exec, exception);
+        promise->reject(exec, exception->value());
         return JSValue::encode(promise->promise());
     }
     promise->resolve(exec, internalPromise);
