@@ -1,3 +1,15 @@
+2017-03-19  Yusuke Suzuki  <utatane.tea@gmail.com>
+
+        import(arg) crashes when ToString(arg) throws
+        https://bugs.webkit.org/show_bug.cgi?id=169778
+
+        Reviewed by Saam Barati.
+
+        JSPromiseDeferred should not be rejected with Exception*.
+
+        * runtime/JSGlobalObjectFunctions.cpp:
+        (JSC::globalFuncImportModule):
+
 2017-03-18  Oleksandr Skachkov  <gskachkov@gmail.com>
 
         [JSC] Remove unnecessary condition from needsDerivedConstructorInArrowFunctionLexicalEnvironment in BytecodeGenerator.cpp 
